[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
futures = "0.3.5"
futures-lite = "1.11.1"
ansi_term = "0.12.1"
glommio = { version = "0.3.0", path = "../glommio" }
pretty-bytes = "0.2.2"
clap = "2.33"
sys-info = "0.7.0"
fastrand = "1.4.0"
fasthash = "0.3.2"
futures-util = "0.3"
lazy_static = "1.4.0"
http-body = "0.4"
bytes = "*"

# hyper and tokio for the hyper example. We just need the traits from Tokio
hyper = { version = "0.14.5", default-features = false, features = ["server", "stream", "client", "http1", "http2", "tcp"]  }
tokio = { version = "1.4.0", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1


[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "ping_pong"
path = "ping_pong.rs"

[[example]]
name = "defer"
path = "defer.rs"

[[example]]
name = "cooperative_preempt"
path = "cooperative_preempt.rs"

[[example]]
name = "deadline"
path = "deadline_writer.rs"

[[example]]
name = "storage"
path = "storage.rs"

[[example]]
name = "channel_mesh"
path = "sharding.rs"

[[example]]
name = "hyper"
path = "hyper.rs"

[[example]]
name = "gate"
path = "gate.rs"
